# Breadboard

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  types.rs
backend/src/api/: mod.rs  reviews.rs  session.rs  user.rs
backend/src/auth/: mod.rs  password.rs  session.rs  sessions.rs  user.rs  verification.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/server/: index.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: context.js  exports.js  index.js  internal.js  utils2.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: types.ts
frontend/src/lib/server/: session.ts  types.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/login/register/: +page.server.ts  +page.svelte
src/: app.css
src/lib/assets/: MockData.json
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
(+21 files in other folders)
