[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-config = "1.8.13"
aws-sdk-dynamodb = "1.104.0"
axum = "0.8.8"
axum-extra = {"version" = "0.12.5", features = ["cookie"] }
rand = "0.10.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.3"
