[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = {version = "0.5.3", features = ["std"] }
aws-config = "1.8.13"
aws-sdk-dynamodb = "1.104.0"
axum = {version ="0.8.8", features = ["macros"] }
rand = "0.10.0"
serde = {"version" = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.3"
tower-http = {version = "0.6.8", features = ["cors"]}
